--- a/client/src/screens/GameVote.module.css
+++ b/client/src/screens/GameVote.module.css
@@ -3,6 +3,7 @@
   min-height: 100vh;
   width: 100%;
   max-width: 100vw;
+  padding-bottom: 46px;
   background-color: var(--felt-dark);
   background-image:
     radial-gradient(ellipse at top, var(--felt-green) 0%, var(--felt-dark) 60%);
